--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<properties>
 		<bundle.symbolicName>org.cytoscape.cyGraph-impl</bundle.symbolicName>
 		<bundle.namespace>org.cytoscape.cyGraph</bundle.namespace>
-		<cytoscape.api.version>3.0.0</cytoscape.api.version>
+		<cytoscape.api.version>3.1.0</cytoscape.api.version>
 		
-		<maven-bundle-plugin.version>2.3.4</maven-bundle-plugin.version>
+		<maven-bundle-plugin.version>2.3.7</maven-bundle-plugin.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
 	</properties>
 
@@ -15,10 +15,11 @@
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	
 	<build>
 		<plugins>
+				
 			<plugin>
 				<inherited>true</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -41,15 +42,15 @@
 				<artifactId>maven-bundle-plugin</artifactId>
 				<version>${maven-bundle-plugin.version}</version>
 				<extensions>true</extensions>
-					<configuration>
-<instructions>
-<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-<Bundle-Version>${project.version}</Bundle-Version>
-<Export-Package>!${bundle.namespace}.*</Export-Package>
-<Private-Package>${bundle.namespace}.*</Private-Package>
-<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
-</instructions>
-</configuration>
+				<configuration>
+					<instructions>
+					<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+					<Bundle-Version>${project.version}</Bundle-Version>
+					<Export-Package>!${bundle.namespace}.internal.*, ${bundle.namespace}.*</Export-Package>
+					<Private-Package>${bundle.namespace}.*</Private-Package>
+					<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
+					</instructions>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -164,18 +165,11 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>gov.nist.math</groupId>
-			<artifactId>jama</artifactId>
-			<version>1.0.2</version>
-			<scope>provided</scope>
-		</dependency>
 		
 		<dependency>
 			<groupId>org.cytoscape.cyGraph-api</groupId>
 			<artifactId>cyGraph-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
